--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy site
 
-on: [push]
-  # release:
-  #   types: [created]
+on:
+  release:
+    types: [created]
     
 jobs:
   deploy:
