feat: configure custom domain

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,4 @@ jobs:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./docs/.vuepress/dist
                   commit_message: ${{ github.event.head_commit.message }}
+                  cname: you-space.dev
